# test_swig_php

./: CMakeLists.txt  test.cpp  test.i
